[gd_scene load_steps=5 format=3 uid="uid://b4xp2b13gbg4j"]

[ext_resource type="Script" uid="uid://bi4aambjmawmd" path="res://item.gd" id="1_ttk8k"]
[ext_resource type="FontFile" uid="uid://d1o7fr6w7chnu" path="res://CourierPrime-Bold.ttf" id="2_ys7tt"]
[ext_resource type="FontFile" uid="uid://bnls3d2ut4gkj" path="res://CourierPrime-Regular.ttf" id="3_unjj8"]
[ext_resource type="FontFile" uid="uid://d8ekjaepea6w" path="res://CascadiaCode-VariableFont_wght.ttf" id="4_7u88n"]

[node name="Item" type="Panel"]
custom_minimum_size = Vector2(0, 110)
script = ExtResource("1_ttk8k")

[node name="ItemTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_bottom = 26.0
grow_horizontal = 2
pivot_offset = Vector2(99, 16)
theme_override_fonts/font = ExtResource("2_ys7tt")
theme_override_font_sizes/font_size = 18
text = "Rubber Duck Debugging"
horizontal_alignment = 1

[node name="ItemDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(99, 16)
theme_override_fonts/font = ExtResource("3_unjj8")
theme_override_font_sizes/font_size = 12
text = "Twice the code windows, twice the productivity. +100% auto-code speed."
horizontal_alignment = 1
autowrap_mode = 3

[node name="BuyButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -36.0
offset_right = 55.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_7u88n")
theme_override_font_sizes/font_size = 15
text = "8000 Lines"

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
